--- a/Tools/DtTemplates/PrjTemplate/Client/Stub/Common.props
+++ b/Tools/DtTemplates/PrjTemplate/Client/Stub/Common.props
@@ -1,15 +1,18 @@
 <Project ToolsVersion="Current">
 	<PropertyGroup>
 		<NoWarn>$(NoWarn);1591;NU1701;Uno0001;0252</NoWarn>
+		<!-- 启用全局using -->
 		<ImplicitUsings>enable</ImplicitUsings>
 		<!-- wasm不支持Essentials, android编译产生缺androidx.window.extensions.jar androidx.window.sidecar.jar警告 -->
 		<UseMauiEssentials Condition="'$(TargetFramework)' != 'net6.0'">true</UseMauiEssentials>
+		<!-- release不输出pbd调试信息 -->
+		<DebugType Condition="'$(Configuration)'=='Release'">none</DebugType>
 	</PropertyGroup>
 
-	<!-- release不输出pbd调试信息 -->
-	<PropertyGroup Condition="'$(Configuration)'=='Release'">
-		<DebugType>none</DebugType>
-	</PropertyGroup>
+	<!-- 公共引用包 -->
+	<ItemGroup>
+		<PackageReference Include="Dt.Client" Version="2.8.6" />
+	</ItemGroup>
 
 	<!-- 定义平台常量 -->
 	<PropertyGroup Condition="$(TargetFramework.Contains('-windows'))">
@@ -30,56 +33,6 @@
 	<PropertyGroup Condition="'$(TargetFramework)' == 'net6.0'">
 		<DefineConstants>$(DefineConstants);WASM;UNO_DISABLE_KNOWN_MISSING_TYPES</DefineConstants>
 	</PropertyGroup>
-
-	<!-- 公共引用包 -->
-	<ItemGroup>
-		<PackageReference Include="Dt.Client" Version="2.8.6" />
-		<PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.9" />
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
-		<!-- 2.1.0后支持.net6 maui，旧版在iOS中无法初始化，2.1.1在iOS中无法AOT -->
-		<PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.0" />
-		<PackageReference Include="Serilog" Version="2.11.0" />
-		<PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
-		<PackageReference Include="Serilog.Formatting.Compact" Version="1.1.0" />
-	</ItemGroup>
-
-	<!-- 非windows引用包 -->
-	<ItemGroup Condition="!$(TargetFramework.Contains('-windows'))">
-		<PackageReference Include="Uno.WinUI" Version="4.5.12" />
-		<!-- 对应CommunityToolkit.WinUI.Lottie库，渲染Adobe AfterEffects json动画，内部引用SkiaSharp包实现LottieVisualSource -->
-		<PackageReference Include="Uno.WinUI.Lottie" Version="4.5.12" />
-		<!-- uno日志 -->
-		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.12" />
-		<PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
-	</ItemGroup>
-
-	<!-- windows引用包 -->
-	<ItemGroup Condition="$(TargetFramework.Contains('-windows'))">
-		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.1.5" />
-		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.1" />
-		<!-- Toast参数启动引用 -->
-		<PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.1.2" />
-	</ItemGroup>
-
-	<!-- android引用包 -->
-	<ItemGroup Condition="$(TargetFramework.Contains('-android'))">
-		<PackageReference Include="Square.OkHttp3" Version="4.9.3.2" />
-		<!-- WorkManager后台任务引用 -->
-		<PackageReference Include="Xamarin.AndroidX.Work.Runtime" Version="2.7.1.4" />
-	</ItemGroup>
-
-	<!-- iOS引用包 -->
-	<ItemGroup Condition="$(TargetFramework.Contains('-ios'))">
-		<PackageReference Include="Uno.Extensions.Logging.OSLog" Version="1.4.0" />
-	</ItemGroup>
-
-	<!-- wasm引用包 -->
-	<ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
-		<PackageReference Include="Uno.WinUI.WebAssembly" Version="4.5.12" />
-		<PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.4.0" />
-		<PackageReference Include="SQLitePCLRaw.provider.sqlite3" Version="2.1.0" />
-	</ItemGroup>
 
 	<ItemGroup>
 		<Using Include="Dt.Core" />
