--- a/Client/Dt.Shell.Wasm/Dt.Shell.Wasm.csproj
+++ b/Client/Dt.Shell.Wasm/Dt.Shell.Wasm.csproj
@@ -24,8 +24,8 @@
         <!-- 内容文件输出到 package_xxx 的对应子目录下 -->
         <Content Include="assets\**" />
         <Content Include="..\Dt.Shell.Win\Assets\Lottie\*.json" Link="assets\lottie\%(Filename).json" />
-        <Content Include="..\Dt.Shell.Win\Images\*.png" Link="Images\%(Filename).png" />
-        <!-- 嵌入资源文件输出到 package_xxx 根目录下 -->
+        <Content Include="..\Dt.Shell.Win\Images\*.png" Link="images\%(Filename).png" />
+        <!-- 嵌入资源文件输出到 package_xxx 根目录下，目录名不可修改 -->
         <EmbeddedResource Include="WasmCSS\*.css" />
         <EmbeddedResource Include="WasmScripts\*.js" />
     </ItemGroup>
@@ -51,7 +51,7 @@
         <PackageReference Include="Uno.WinUI.WebAssembly" Version="4.5.14" />
         <PackageReference Include="Uno.Wasm.Bootstrap" Version="3.3.1" />
         <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="3.3.1" />
-        <PackageReference Include="Dt.WasmTools" Version="1.2.0" />
+        <PackageReference Include="Dt.WasmTools" Version="1.3.0" />
         <!-- 升级wasmsdk压缩包后第一次生成时需要引用该包，生成后将dotnet.js、dotnet.wasm替换wasmsdk压缩包的同名文件，再次build不需引用该包，节约时间 -->
         <!--<PackageReference Include="Uno.sqlite-wasm" Version="3.34.1.3" />-->
     </ItemGroup>
