--- a/Client/Dt.Shell.Wasm/Dt.Shell.Wasm.csproj
+++ b/Client/Dt.Shell.Wasm/Dt.Shell.Wasm.csproj
@@ -4,7 +4,9 @@
         <OutputType>Exe</OutputType>
         <TargetFramework>net6.0</TargetFramework>
         <NoWarn>NU1701</NoWarn>
-
+        <!-- 使用Dt.BuildTools标志 -->
+        <UseWasmTools>true</UseWasmTools>
+        
         <!-- 必须sdk完整路径，避免总下载失败 -->
         <NetCoreWasmSDKUri>d:\dt\Package\wasm\dotnet-runtime-wasm-windows-bd114dd-53ca85fb900-1877706367-Sqlite.zip</NetCoreWasmSDKUri>
 
@@ -15,7 +17,6 @@
     <Import Project="..\Common.props" />
 
     <ItemGroup>
-        <PackageReference Include="Dt.WasmTools" Version="1.3.0" />
         <PackageReference Include="Uno.Wasm.Bootstrap" Version="3.3.1" />
         <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="3.3.1" />
 
