--- a/Tools/BuildTools/TestTools/TestTools.csproj
+++ b/Tools/BuildTools/TestTools/TestTools.csproj
@@ -8,7 +8,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\Dt.BuildTools\Dt.BuildTools.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+		<!--<ProjectReference Include="..\Dt.BuildTools\Dt.BuildTools.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />-->
 		<!--<PackageReference Include="Dt.BuildTools" Version="1.0.0" />-->
 	</ItemGroup>
 
