VS扩展工具新建项目时增加向导

--- a/Tools/DtTemplates/PrjTemplate/Client/Client.csproj
+++ b/Tools/DtTemplates/PrjTemplate/Client/Client.csproj
@@ -2,6 +2,8 @@
 	<PropertyGroup>
 		<TargetFrameworks>net6.0-windows10.0.19041;net6.0-android;net6.0-ios;net6.0</TargetFrameworks>
 		<RootNamespace>$ext_safeprojectname$</RootNamespace>
+		<!-- 使用Dt.BuildTools标志 -->
+		<UseStub>true</UseStub>
 	</PropertyGroup>
 
 	<Import Project="Stub\Common.props" />
