--- a/Tools/DtTemplates/PrjTemplate/Wasm/Wasm.csproj
+++ b/Tools/DtTemplates/PrjTemplate/Wasm/Wasm.csproj
@@ -4,7 +4,9 @@
         <OutputType>Exe</OutputType>
         <TargetFramework>net6.0</TargetFramework>
         <NoWarn>NU1701</NoWarn>
-
+		<!-- 使用Dt.BuildTools标志 -->
+		<UseWasmTools>true</UseWasmTools>
+		
 		<!-- 必须sdk完整路径，避免总下载失败 -->
         <NetCoreWasmSDKUri>d:\dt\Package\wasm\dotnet-runtime-wasm-windows-bd114dd-53ca85fb900-1877706367-Sqlite.zip</NetCoreWasmSDKUri>
 
