--- a/Client/Dt.Shell.Wasm/pwa/manifest.json
+++ b/Client/Dt.Shell.Wasm/pwa/manifest.json
@@ -2,156 +2,156 @@
   "name": "搬运工-Wasm",
   "short_name": "搬运工",
   "description": "搬运工平台样例",
-  "start_url": "..",
+  "start_url": "../..",
   "background_color": "#1BA1E2",
   "display": "standalone",
   "icons": [
     {
-      "src": "pwa/windows11/SplashScreen.scale-200.png",
+      "src": "win/SplashScreen.scale-200.png",
       "sizes": "1240x600"
     },
     {
-      "src": "pwa/windows11/Square150x150Logo.scale-200.png",
+      "src": "win/Square150x150Logo.scale-200.png",
       "sizes": "300x300"
     },
     {
-      "src": "pwa/windows11/Square44x44Logo.scale-200.png",
+      "src": "win/Square44x44Logo.scale-200.png",
       "sizes": "88x88"
     },
     {
-      "src": "pwa/windows11/StoreLogo.scale-200.png",
+      "src": "win/StoreLogo.scale-200.png",
       "sizes": "100x100"
     },
     {
-      "src": "pwa/windows11/Wide310x150Logo.scale-200.png",
+      "src": "win/Wide310x150Logo.scale-200.png",
       "sizes": "620x300"
     },
     {
-      "src": "pwa/android/android-launchericon-512-512.png",
+      "src": "android/android-launchericon-512-512.png",
       "sizes": "512x512"
     },
     {
-      "src": "pwa/android/android-launchericon-192-192.png",
+      "src": "android/android-launchericon-192-192.png",
       "sizes": "192x192"
     },
     {
-      "src": "pwa/android/android-launchericon-144-144.png",
+      "src": "android/android-launchericon-144-144.png",
       "sizes": "144x144"
     },
     {
-      "src": "pwa/android/android-launchericon-96-96.png",
+      "src": "android/android-launchericon-96-96.png",
       "sizes": "96x96"
     },
     {
-      "src": "pwa/android/android-launchericon-72-72.png",
+      "src": "android/android-launchericon-72-72.png",
       "sizes": "72x72"
     },
     {
-      "src": "pwa/android/android-launchericon-48-48.png",
+      "src": "android/android-launchericon-48-48.png",
       "sizes": "48x48"
     },
     {
-      "src": "pwa/ios/16.png",
+      "src": "ios/16.png",
       "sizes": "16x16"
     },
     {
-      "src": "pwa/ios/20.png",
+      "src": "ios/20.png",
       "sizes": "20x20"
     },
     {
-      "src": "pwa/ios/29.png",
+      "src": "ios/29.png",
       "sizes": "29x29"
     },
     {
-      "src": "pwa/ios/32.png",
+      "src": "ios/32.png",
       "sizes": "32x32"
     },
     {
-      "src": "pwa/ios/40.png",
+      "src": "ios/40.png",
       "sizes": "40x40"
     },
     {
-      "src": "pwa/ios/50.png",
+      "src": "ios/50.png",
       "sizes": "50x50"
     },
     {
-      "src": "pwa/ios/57.png",
+      "src": "ios/57.png",
       "sizes": "57x57"
     },
     {
-      "src": "pwa/ios/58.png",
+      "src": "ios/58.png",
       "sizes": "58x58"
     },
     {
-      "src": "pwa/ios/60.png",
+      "src": "ios/60.png",
       "sizes": "60x60"
     },
     {
-      "src": "pwa/ios/64.png",
+      "src": "ios/64.png",
       "sizes": "64x64"
     },
     {
-      "src": "pwa/ios/72.png",
+      "src": "ios/72.png",
       "sizes": "72x72"
     },
     {
-      "src": "pwa/ios/76.png",
+      "src": "ios/76.png",
       "sizes": "76x76"
     },
     {
-      "src": "pwa/ios/80.png",
+      "src": "ios/80.png",
       "sizes": "80x80"
     },
     {
-      "src": "pwa/ios/87.png",
+      "src": "ios/87.png",
       "sizes": "87x87"
     },
     {
-      "src": "pwa/ios/100.png",
+      "src": "ios/100.png",
       "sizes": "100x100"
     },
     {
-      "src": "pwa/ios/114.png",
+      "src": "ios/114.png",
       "sizes": "114x114"
     },
     {
-      "src": "pwa/ios/120.png",
+      "src": "ios/120.png",
       "sizes": "120x120"
     },
     {
-      "src": "pwa/ios/128.png",
+      "src": "ios/128.png",
       "sizes": "128x128"
     },
     {
-      "src": "pwa/ios/144.png",
+      "src": "ios/144.png",
       "sizes": "144x144"
     },
     {
-      "src": "pwa/ios/152.png",
+      "src": "ios/152.png",
       "sizes": "152x152"
     },
     {
-      "src": "pwa/ios/167.png",
+      "src": "ios/167.png",
       "sizes": "167x167"
     },
     {
-      "src": "pwa/ios/180.png",
+      "src": "ios/180.png",
       "sizes": "180x180"
     },
     {
-      "src": "pwa/ios/192.png",
+      "src": "ios/192.png",
       "sizes": "192x192"
     },
     {
-      "src": "pwa/ios/256.png",
+      "src": "ios/256.png",
       "sizes": "256x256"
     },
     {
-      "src": "pwa/ios/512.png",
+      "src": "ios/512.png",
       "sizes": "512x512"
     },
     {
-      "src": "pwa/ios/1024.png",
+      "src": "ios/1024.png",
       "sizes": "1024x1024"
     }
   ]
