--- a/Tools/BuildTools/Dt.BuildTools/Dt.BuildTools.csproj
+++ b/Tools/BuildTools/Dt.BuildTools/Dt.BuildTools.csproj
@@ -12,7 +12,7 @@
 
 	<!-- 包属性 -->
 	<PropertyGroup>
-		<Version>1.2.0</Version>
+		<Version>1.3.0</Version>
 		<Description>搬运工客户端生成时工具包</Description>
 		<Authors>Daoting</Authors>
 		<Product>搬运工基础平台</Product>
@@ -32,6 +32,9 @@
 			<PackagePath>\</PackagePath>
 			<Visible>false</Visible>
 		</None>
+		<None Include="SourceGenerator\Uno\BindableTypeProvidersGenerationTask.cs" />
+		<None Include="SourceGenerator\Uno\XamlCodeGeneration.cs" />
+		<None Include="SourceGenerator\Uno\XamlFileGenerator.cs" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -44,6 +47,12 @@
 			<Pack>true</Pack>
 			<PackagePath>build</PackagePath>
 		</Content>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Compile Remove="SourceGenerator\Uno\BindableTypeProvidersGenerationTask.cs" />
+	  <Compile Remove="SourceGenerator\Uno\XamlCodeGeneration.cs" />
+	  <Compile Remove="SourceGenerator\Uno\XamlFileGenerator.cs" />
 	</ItemGroup>
 
 	<Target Name="CopyProjectReferencesToPackage" DependsOnTargets="ResolveReferences">
