Common.props移入根目录

--- a/Tools/DtTemplates/PrjTemplate/Client/Client.csproj
+++ b/Tools/DtTemplates/PrjTemplate/Client/Client.csproj
@@ -4,5 +4,5 @@
 		<RootNamespace>$ext_safeprojectname$</RootNamespace>
 	</PropertyGroup>
 
-	<Import Project="Stub\Common.props" />
+	<Import Project="..\Common.props" />
 </Project>
