--- a/Tools/DtTemplates/PrjTemplate/PrjTemplate.csproj
+++ b/Tools/DtTemplates/PrjTemplate/PrjTemplate.csproj
@@ -62,7 +62,7 @@
     <None Include="iOS\iOS\Entitlements.plist" />
     <None Include="iOS\iOS\Info.plist" />
     <None Include="iOS\iOS\LaunchScreen.storyboard" />
-    <None Include="Client\Stub\Common.props" />
+    <None Include="Client\Stub\Options\Common.props" />
     <None Include="Client\Client.csproj" />
     <None Include="Svc\etc\config\global.json" />
     <None Include="Svc\etc\config\logger.json" />
@@ -236,6 +236,7 @@
     <Content Include="Wasm\pwa\windows11\Wide310x150Logo.scale-200.png" />
     <Content Include="Wasm\WasmScripts\AppManifest.js" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
