--- a/Tools/DtTemplates/PrjTemplate/Win/Win.csproj
+++ b/Tools/DtTemplates/PrjTemplate/Win/Win.csproj
@@ -11,7 +11,7 @@
 		<DefaultLanguage>zh-CN</DefaultLanguage>
 	</PropertyGroup>
 
-	<Import Project="..\$ext_safeprojectname$.Client\Stub\Common.props" />
+	<Import Project="..\Common.props" />
 
 	<ItemGroup>
 		<ProjectReference Include="..\$ext_safeprojectname$.Client\$ext_safeprojectname$.Client.csproj" />
