升级.net7.0，wasm编译错误，其它有警告

--- a/Client/Dt.Mgr/Dt.Mgr.csproj
+++ b/Client/Dt.Mgr/Dt.Mgr.csproj
@@ -30,7 +30,7 @@
         <Using Include="Dt.Base" />
     </ItemGroup>
     
-    <ItemGroup Condition="'$(TargetFramework)' != 'net6.0'">
+    <ItemGroup Condition="$(TargetFramework.Contains('-'))">
         <None Include="Chat\WebRTC\VideoCaller.xaml" />
         <Page Remove="Chat\WebRTC\VideoCaller.xaml" />
 
