--- a/Client/Common.props
+++ b/Client/Common.props
@@ -5,7 +5,7 @@
         <!-- 启用全局using -->
         <ImplicitUsings>enable</ImplicitUsings>
         <!-- wasm不支持Essentials, android编译产生缺androidx.window.extensions.jar androidx.window.sidecar.jar警告 -->
-        <UseMauiEssentials Condition="'$(TargetFramework)' != 'net6.0'">true</UseMauiEssentials>
+        <UseMauiEssentials Condition="$(TargetFramework.Contains('-'))">true</UseMauiEssentials>
         <!-- release不输出pbd调试信息 -->
 		<DebugType Condition="'$(Configuration)'=='Release'">none</DebugType>
     </PropertyGroup>
@@ -26,13 +26,13 @@
         <SupportedOSPlatformVersion>21.0</SupportedOSPlatformVersion>
     </PropertyGroup>
 
-    <PropertyGroup Condition="'$(TargetFramework)' == 'net6.0'">
+    <PropertyGroup Condition="!$(TargetFramework.Contains('-'))">
         <DefineConstants>$(DefineConstants);WASM;UNO_DISABLE_KNOWN_MISSING_TYPES</DefineConstants>
     </PropertyGroup>
 
     <!-- 公共引用包 -->
     <ItemGroup>
-        <PackageReference Include="Dt.Infras" Version="2.3.4" /> 
+        <PackageReference Include="Dt.Infras" Version="2.4.0" /> 
         <PackageReference Include="Dt.BuildTools" Version="1.3.0" PrivateAssets="none" />
         <PackageReference Include="Microsoft.Data.Sqlite" Version="6.0.10" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
@@ -56,7 +56,7 @@
 
     <!-- windows引用包 -->
     <ItemGroup Condition="$(TargetFramework.Contains('-windows'))">
-        <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.1.5" />
+        <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.221109.1" />
         <!-- Toast参数启动引用 -->
         <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications" Version="7.1.2" />
     </ItemGroup>
@@ -74,7 +74,7 @@
     </ItemGroup>
 
     <!-- wasm引用包 -->
-    <ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
+    <ItemGroup Condition="!$(TargetFramework.Contains('-'))">
         <!-- 打包后提供给外部 web 项目引用时，需要 build 里的 .target -->
         <PackageReference Include="Uno.WinUI.WebAssembly" Version="4.6.19" PrivateAssets="none" />
         <PackageReference Include="Uno.Extensions.Logging.WebAssembly.Console" Version="1.4.0" />
@@ -111,7 +111,7 @@
         <Using Remove="UIKit" />
     </ItemGroup>
 
-    <ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
+    <ItemGroup Condition="!$(TargetFramework.Contains('-'))">
         <Using Remove="Microsoft.AspNetCore.Builder" />
         <Using Remove="Microsoft.AspNetCore.Hosting" />
         <Using Remove="Microsoft.AspNetCore.Http" />
