--- a/Client/Common.props
+++ b/Client/Common.props
@@ -48,6 +48,8 @@
         <PackageReference Include="Uno.WinUI.Lottie" Version="4.6.19" />
         <!-- uno日志 -->
         <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.19" />
+        <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
     </ItemGroup>
 
     <!-- windows引用包 -->
