--- a/Tools/DtTemplates/PrjTemplate/Wasm/Wasm.csproj
+++ b/Tools/DtTemplates/PrjTemplate/Wasm/Wasm.csproj
@@ -2,13 +2,13 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net7.0</TargetFramework>
         <NoWarn>NU1701</NoWarn>
 		<!-- 使用Dt.BuildTools标志 -->
 		<UseWasmTools>true</UseWasmTools>
 		
 		<!-- 必须sdk完整路径，避免总下载失败 -->
-        <NetCoreWasmSDKUri>d:\dt\Package\wasm\dotnet-runtime-wasm-windows-bd114dd-53ca85fb900-1877706367-Sqlite.zip</NetCoreWasmSDKUri>
+        <NetCoreWasmSDKUri>d:\dt\Package\wasm\dotnet-runtime-wasm-windows-633c7b6-0cee4aaff9c-3338312971-Sqlite.zip</NetCoreWasmSDKUri>
 
         <!-- 默认Interpreter -->
         <!--<WasmShellMonoRuntimeExecutionMode>FullAOT</WasmShellMonoRuntimeExecutionMode>-->
@@ -17,12 +17,14 @@
 	<Import Project="..\Common.props" />
 
 	<ItemGroup>
-		<PackageReference Include="Uno.Wasm.Bootstrap" Version="3.3.1" />
-		<PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="3.3.1" />
 		<ProjectReference Include="..\$ext_safeprojectname$.Client\$ext_safeprojectname$.Client.csproj" />
-		
+		<PackageReference Include="Uno.Wasm.Bootstrap" Version="7.0.8" />
+		<PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="7.0.8" />
+		<!-- 不引用link出错 -->
+		<PackageReference Include="Microsoft.Windows.Compatibility" Version="6.0.0" />
+
 		<!-- 升级wasmsdk压缩包后第一次生成时需要引用该包，生成后将dotnet.js、dotnet.wasm替换wasmsdk压缩包的同名文件，再次build不需引用该包，节约时间 -->
-		<!--<PackageReference Include="Uno.sqlite-wasm" Version="3.34.1.3" />-->
+		<!--<PackageReference Include="Uno.sqlite-wasm" Version="3.34.1.4" />-->
 	</ItemGroup>
 
 	<ItemGroup>
@@ -49,13 +51,15 @@
 		<DefineConstants>$(DefineConstants);TRACE;DEBUG</DefineConstants>
 		<DebugType>portable</DebugType>
 		<DebugSymbols>true</DebugSymbols>
+		<!-- 完全禁用链接器，不裁剪dll，生成速度快，裁剪61M，不裁剪82M -->
+		<!--<WasmShellILLinkerEnabled>false</WasmShellILLinkerEnabled>-->
 	</PropertyGroup>
 
 	<!-- PWA相关，只在Release时有效 -->
-    <PropertyGroup Condition="'$(Configuration)'=='Release'">
-        <WasmPWAManifestFile>manifest.json</WasmPWAManifestFile>
-    </PropertyGroup>
-    <ItemGroup Condition="'$(Configuration)'=='Release'">
-        <Content Include="pwa\**" />
-    </ItemGroup>
+	<PropertyGroup Condition="'$(Configuration)'=='Release'">
+		<WasmPWAManifestFile>pwa/manifest.json</WasmPWAManifestFile>
+	</PropertyGroup>
+	<ItemGroup Condition="'$(Configuration)'=='Release'">
+		<Content Include="pwa\**" Exclude="pwa\manifest.json" />
+	</ItemGroup>
 </Project>
