--- a/Client/Dt.Shell.IOS/Dt.Shell.IOS.csproj
+++ b/Client/Dt.Shell.IOS/Dt.Shell.IOS.csproj
@@ -35,6 +35,7 @@
         <ProjectReference Include="..\Dt.Core\Dt.Core.csproj" />
         <ProjectReference Include="..\Dt.Base\Dt.Base.csproj" />
         <ProjectReference Include="..\Dt.Mgr\Dt.Mgr.csproj" />
+        <ProjectReference Include="..\Dt.MgrDemo\Dt.MgrDemo.csproj" />
         <ProjectReference Include="..\Dt.UIDemo\Dt.UIDemo.csproj" />
     </ItemGroup>
 
