--- a/Client/Dt.Shell.Win/Dt.Shell.Win.csproj
+++ b/Client/Dt.Shell.Win/Dt.Shell.Win.csproj
@@ -25,6 +25,8 @@
     <ItemGroup>
         <ProjectReference Include="..\Dt.Core\Dt.Core.csproj" />
         <ProjectReference Include="..\Dt.Base\Dt.Base.csproj" />
+        <ProjectReference Include="..\Dt.Mgr\Dt.Mgr.csproj" />
+        <ProjectReference Include="..\Dt.MgrDemo\Dt.MgrDemo.csproj" />
         <ProjectReference Include="..\Dt.UIDemo\Dt.UIDemo.csproj" />
     </ItemGroup>
 
