--- a/Client/Dt.Base/Dt.Base.csproj
+++ b/Client/Dt.Base/Dt.Base.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <Description>控件库(搬运工客户端)</Description>
+        <Description>搬运工控件库</Description>
         <GenerateDocumentationFile>True</GenerateDocumentationFile>
     </PropertyGroup>
 
