--- a/Client/Dt.MgrDemo/Dt.MgrDemo.csproj
+++ b/Client/Dt.MgrDemo/Dt.MgrDemo.csproj
@@ -5,6 +5,10 @@
 
     <Import Project="..\Targets.props" />
     <Import Project="..\Common.props" />
+    <ItemGroup>
+      <None Remove="Workflow\收文Form.xaml" />
+      <None Remove="Workflow\收文List.xaml" />
+    </ItemGroup>
     
 	<ItemGroup>
         <ProjectReference Include="..\Dt.Core\Dt.Core.csproj" />
@@ -18,5 +22,14 @@
         <Using Include="Dt.Mgr.Domain" />
         <Using Include="Dt.MgrDemo.Domain" />
         <Using Include="Dt.MgrDemo.Agent" />
+    </ItemGroup>
+    
+    <ItemGroup>
+      <Page Update="Workflow\收文Form.xaml">
+        <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+      </Page>
+      <Page Update="Workflow\收文List.xaml">
+        <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+      </Page>
     </ItemGroup>
 </Project>
