Entity增加静态方法DelByID

--- a/Client/Dt.Core/Dt.Core.csproj
+++ b/Client/Dt.Core/Dt.Core.csproj
@@ -18,9 +18,14 @@
 		<Compile Include="..\..\Service\src\Dt.Core\Base\Collection\Table\Table.cs" Link="Base\Collection\Table\Table.cs" />
 		<Compile Include="..\..\Service\src\Dt.Core\Base\Collection\Table\Table`1.cs" Link="Base\Collection\Table\Table`1.cs" />
 		<Compile Include="..\..\Service\src\Dt.Core\Base\MySql\TableSchema.cs" Link="Base\DataProvider\TableSchema.cs" />
-		<Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Entity\Entity.cs" Link="Base\Domain\Entity.cs" />
-        <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Entity\EntityEx.cs" Link="Base\Domain\EntityEx.cs" />
-        <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Entity\TblAttribute.cs" Link="Base\Domain\TblAttribute.cs" />
+		<Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Entity\Entity.cs" Link="Base\Domain\Entity\Entity.cs" />
+        <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Entity\EntityEx.cs" Link="Base\Domain\Entity\EntityEx.cs" />
+        <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Entity\TblAttribute.cs" Link="Base\Domain\Entity\TblAttribute.cs" />
+        <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Entity\CudEventAttribute.cs" Link="Base\Domain\Entity\CudEventAttribute.cs" />
+        <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Entity\CacheAttribute.cs" Link="Base\Domain\Entity\CacheAttribute.cs" />
+        <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\Event\CudEvent.cs" Link="Base\Domain\Event\CudEvent.cs" />
+        <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\UnitOfWork\UnitOfWork.cs" Link="Base\Domain\UnitOfWork\UnitOfWork.cs" />
+        <Compile Include="..\..\Service\src\Dt.Core\Base\Domain\UnitOfWork\UnitItem.cs" Link="Base\Domain\UnitOfWork\UnitItem.cs" />
 		<Compile Include="..\..\Service\src\Dt.Core\Base\DataProvider\EntitySchema.cs" Link="Base\DataProvider\EntitySchema.cs" />
 		<Compile Include="..\..\Service\src\Dt.Core\Internal\Extensions\EnumEx.cs" Link="Internal\Extensions\EnumEx.cs" />
 		<Compile Include="..\..\Service\src\Dt.Core\Internal\Extensions\ObjectEx.cs" Link="Internal\Extensions\ObjectEx.cs" />
